--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.devtools.ksp").version("1.7.10-1.0.6")
+    id("com.google.devtools.ksp").version("1.7.20-1.0.7")
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
 }
@@ -40,7 +40,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.0'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
         resources {
@@ -57,11 +57,11 @@ dependencies {
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:lifecycle_version"
     def nav_version = "2.5.3"
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation('androidx.datastore:datastore-preferences:1.1.0-dev01')
 
     ksp("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
     implementation("com.squareup.moshi:moshi:1.14.0")
@@ -69,12 +69,10 @@ dependencies {
     implementation("androidx.core:core-ktx:1.9.0")
     implementation('androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha03')
 
-    implementation("androidx.datastore:datastore-preferences:1.0.0")
-
     implementation ("androidx.activity:activity-compose:1.6.1")
     implementation ("androidx.compose.ui:ui:$compose_ui_version")
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation "androidx.compose.material:material:1.3.0"
+    implementation 'androidx.compose.material:material:1.4.0-alpha01'
 
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.github.liangjingkanji:Net:3.5.1"
