修改 moshi 为 kotlin serialization 还未解决混淆后出现的问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ android.enableAppCompileTimeRClass=true
 android.nonTransitiveRClass=true
 android.experimental.enableNewResourceShrinker=true
 android.experimental.enableNewResourceShrinker.preciseShrinking=true
+org.gradle.unsafe.configuration-cache=true
